[package]
name = "day9-part1"
version = "1.0.0"
authors = ["AaronvDiepen <aaronvdiepen@gmail.com>"]
description = "Day 9 Part 1 of Advent of Code 2023"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.45"
rayon = "1.8.0"
